<resources>
    <string name="app_name">Agarimo</string>
    <string name="botonSignIn">Sign In</string>
    <string name="entryMail">Enter your mail</string>
    <string name="entryPass">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="firstName">Name</string>
    <string name="lastName">Last name</string>
    <string name="login">Init session</string>
    <string name="createAct">Sign Up</string>
    <string name="StreetSearch"></string>
    <string name="searchButton"></string>
    <string name="profButton">Help</string>
    <string name="emailError">Password or Email incorrect </string>
    <string name="passWordError">Password or Email incorrect</string>
    <string name="regname">Name</string>
    <string name="regLastName">Last name</string>
    <string name="regPass">Password</string>
    <string name="regEmail">Email</string>
    <string name="regButton">Register</string>
    <string name="profLab">Professional</string>
    <string name="cliLab">Client</string>
    <string name="choseLab">Choose option</string>
    <string name="title_activity_navigator">Navigator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>