<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passInput"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/regPass"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toTopOf="@+id/regPass"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/regPass"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="33dp"
        android:paddingTop="15dp"
        android:text="@string/regPass"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/regName"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="@+id/regName"
        app:layout_constraintTop_toBottomOf="@+id/regName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailInput"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/regEmail"
        app:layout_constraintEnd_toEndOf="@+id/lastNameInput"
        app:layout_constraintStart_toStartOf="@+id/lastNameInput"
        app:layout_constraintTop_toTopOf="@+id/regEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/regEmail"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="33dp"
        android:paddingTop="15dp"
        android:text="@string/regEmail"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/regName"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="@+id/regName"
        app:layout_constraintTop_toBottomOf="@+id/regName" />

    <TextView
        android:id="@+id/regName"
        android:layout_width="151dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:paddingTop="15dp"
        android:text="@string/regname"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regLastName"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="33dp"
        android:paddingTop="15dp"
        android:text="@string/lastName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/regName"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="@+id/regName"
        app:layout_constraintTop_toBottomOf="@+id/regName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastNameInput"
        android:layout_width="152dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/regLastName"
        app:layout_constraintStart_toEndOf="@+id/regLastName"
        app:layout_constraintTop_toTopOf="@+id/regLastName"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#00BCD4"
        android:foregroundTint="#04D1EC"
        android:text="@string/regButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInput"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/regName"
        app:layout_constraintEnd_toEndOf="@+id/lastNameInput"
        app:layout_constraintStart_toStartOf="@+id/lastNameInput"
        app:layout_constraintTop_toTopOf="@+id/regName" />

</androidx.constraintlayout.widget.ConstraintLayout>