<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectActivity">

    <ImageButton
        android:id="@+id/imageButtonCli"
        android:layout_width="133dp"
        android:layout_height="126dp"
        android:src="@drawable/cli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButtonProf"
        android:layout_width="125dp"
        android:layout_height="119dp"
        android:src="@drawable/prof"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonCli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonCli"
        app:layout_constraintTop_toTopOf="@+id/imageButtonCli"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/clienText"
        android:layout_width="108dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/cliLab"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonCli"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonCli"
        app:layout_constraintStart_toStartOf="@+id/imageButtonCli"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewProf"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/profLab"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonCli"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonProf"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/imageButtonProf"
        app:layout_constraintTop_toTopOf="@+id/clienText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="272dp"
        android:layout_height="44dp"
        android:fontFamily="monospace"
        android:text="@string/choseLab"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />
</androidx.constraintlayout.widget.ConstraintLayout>